# cmake_practice

./: CMakeLists.txt  README.md
lib/: libdy_test.dylib
src/: test.cpp  u.cpp
